--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   background-color: #003E74;
   color: #FFFFFF;
   font-weight: 900;
-  position: relative;
+  position: absolute;
   padding: .5rem 1rem;
 }
 
@@ -18,6 +18,7 @@ body {
 }
 
 h2 {
+  color: #FFFFFF;
   padding-right: 2% !important;
   padding-left: 2% !important;
 }
@@ -50,16 +51,20 @@ p {
 }
 
 .logo {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+  scale: 15%;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  float: left;
 }
 
 .title toc-ignore {
+  color: #FFFFFF !important;
   display: none;
 }
 
 @media (max-width: 1000px) {
   .navbar-header {
+    color: #FFFFFF;
       float: none;
   }
   .navbar-left,.navbar-right {
@@ -84,23 +89,24 @@ p {
       margin-top: 7.5px;
   }
   .navbar-nav>li {
-      float: none;
+      float: left;
   }
   .navbar-nav>li>a {
       padding-top: 10px;
       padding-bottom: 10px;
+      color: #FFFFFF;
   }
   .collapse.in{
       display:block !important;
   }
 }
-/*
- .navbar-brand {
-  display: none;
- }
-*/
+ 
 h1 {
   display: none !important;
+}
+
+a.navbar-brand {
+  color: #FFFFFF;
 }
 
 .navbar-default .navbar-text {
