--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
 }
 
 body {
+  padding-top: 65px; 
   padding-top: 10 !important;
   padding-bottom: 0 !important;
 }
@@ -56,7 +57,7 @@ p {
   display: none;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
   .navbar-header {
       float: none;
   }
