--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,27 @@ h1 {
   background-color: #003E74 !important;
 }
 
+#logo {
+  height:40px;
+}
+
+.navbar-brand {
+  padding-top: 4px;
+  margin-right: 10px;
+}
+
+.navbar-default .navbar-nav>li>a {
+  color: #ACAFB3 !important;  
+}
+
+.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover,  .navbar-default .navbar-nav>li.active>a {
+  color: #FFFFFF !important;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #ddd;
+}
+
 .footer {
   padding: 20px;
   color: white;
